--- a/kyky/src/styles/JobCalendarOverview.scss
+++ b/kyky/src/styles/JobCalendarOverview.scss
@@ -5,10 +5,10 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: max-content;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   background: white;
 
   .side-bar {
@@ -76,7 +76,7 @@
   .time-table {
     position: relative;
     width: calc(100% - 550px);
-    height: 100%;
+    height: max-content;
     display: flex;
     flex-direction: column;
     overflow: hidden;
