--- a/kyky/src/styles/MyCalendar.scss
+++ b/kyky/src/styles/MyCalendar.scss
@@ -2,8 +2,7 @@
 
 .my-calendar {
   width: 100%;
-  height: calc(100% - 70px);
-  overflow: hidden;
+  height: 100%;
 
   .my-calendar-header {
     width: 100%;
